Fixed single player crash when shooting arrow.